# pruefplattform

./: LICENSE  README.md
barebone/: .gitignore  .gitlab-ci.yml  Makefile  README.md  init.sh  pyproject.toml
barebone/docs/mki_barebone/: index.html  main.html  utils.html
barebone/docs/mki_barebone/toolspec_validation/: index.html
barebone/docs/mki_barebone_io/: dataframe.html  dict.html  execution_message.html  index.html  ndarray.html  registry.html
barebone/docs/tests/: index.html  test_aif360.html  test_create_aif360.html  test_create_scikitcontainer.html  test_main.html  test_mockcontainer.html  test_scikit_metrics_container.html  test_workflows.html
barebone/docs/tests/test_io/: index.html  test_dict.html  test_ndarray.html
barebone/docs/tests/toolspec_test/: index.html  test_toolspec_schema.html
barebone/extra/mki-barebone-io/src/mki_barebone_io/: execution_message.py  registry.py
barebone/src/mki_barebone/: __init__.py  main.py  utils.py
barebone/src/mki_barebone/templates/: Dockerfile.jinja  Makefile.jinja  tool.cwl.jinja
barebone/src/mki_barebone/templates/src/enpkg/: main.py.jinja  tool.py.jinja
barebone/src/mki_barebone/templates/src/enpkg/args_backend/: argexec.py
barebone/src/mki_barebone/templates/src/enpkg/grpc_backend/: server.py  utils.py
barebone/src/mki_barebone/toolspec_validation/: __init__.py  toolspec_schema.json
barebone/tests/nodes/mocktool/: spec.json
barebone/tests/nodes/mocktool/tests/: conftest.py
barebone/tests/nodes/mocktool/tests/barebone/: test_create_mockcontainer_cwl.py  test_create_mockcontainer_grpc.py
barebone/tests/nodes/mocktool/tests/context/args/: Dockerfile  Makefile
barebone/tests/nodes/mocktool/tests/context/grpc/: Makefile  spec.json
barebone/tests/nodes/mocktool/tests/generated_context/args/: Makefile  tool.cwl
barebone/tests/nodes/mocktool/tests/generated_context/args/extra/mki-barebone-io/src/mki_barebone_io/: dataframe.py
barebone/tests/nodes/mocktool/tests/generated_context/args/src/enpkg/: tool.py
barebone/tests/nodes/mocktool/tests/generated_context/args/src/enpkg/toolpkg/: metric.py
barebone/tests/nodes/mocktool/tests/generated_context/grpc/: Dockerfile  Makefile  pyproject.toml
barebone/tests/nodes/mocktool/tests/integration/: test_mockcontainer.py  test_workflows.py
barebone/tests/nodes/mocktool/tests/workflow/compose/: workflow.yml
barebone/tests/nodes/mocktool/tests/workflow/cwl/: job.json  tool.cwl  workflow.cwl
barebone/tests/test_io/: test_dict.py  test_ndarray.py
barebone/tests/test_io/data/: true_labels.json
barebone/tests/toolspec_test/: spec_ref1.json  spec_ref2.json  spec_syntax_error.json  spec_wrong_property.json  test_toolspec_schema.py
nodes/aif360/: .gitignore  Makefile  README.md
nodes/aif360/extra/mki-barebone-io/: pyproject.toml
nodes/aif360/src/enpkg/aif360_wrapper/: wrapper.py
nodes/aif360/tests/: conftest.py
nodes/aif360/tests/barebone/: test_create_aif360_cwl.py  test_create_aif360_grpc.py
nodes/aif360/tests/context/args/: .dockerignore  Makefile  pyproject.toml
nodes/aif360/tests/context/args/src/enpkg/: tool.py
nodes/aif360/tests/context/grpc/: Dockerfile  Makefile  spec.json
nodes/aif360/tests/data/: config.json  data.arrow  data.csv
nodes/aif360/tests/integration/: test_aif360.py  test_workflows.py
nodes/aif360/tests/unit/: test_wrapper.py
nodes/aif360/tests/workflow/compose/: workflow.yml
nodes/aif360/tests/workflow/cwl/: job.json  tool.cwl
nodes/scikit-logreg-model/: .gitignore  README.md  pyproject.toml
nodes/scikit-logreg-model/data/: model.pkl
nodes/scikit-logreg-model/src/enpkg/logreg_model_wrapper/: impl.py
nodes/scikit-logreg-model/tests/: conftest.py
nodes/scikit-logreg-model/tests/barebone/: test_barebone.py  test_create_scikit_logreg_model_cwl.py  test_create_scikit_logreg_model_grpc.py
nodes/scikit-logreg-model/tests/data/: features.json  predictions.json
nodes/scikit-logreg-model/tests/integration/: test_scikit_logreg_model.py  test_workflows.py
nodes/scikit-logreg-model/tests/unit/: test_prediction.py
nodes/scikit-metrics-tool/: README.md  pyproject.toml  spec.json
nodes/scikit-metrics-tool/extra/mki-barebone-io/src/mki_barebone_io/: arrow.py
nodes/scikit-metrics-tool/tests/: conftest.py
nodes/scikit-metrics-tool/tests/barebone/: test_create_scikit_cwl.py  test_create_scikit_grpc.py
nodes/scikit-metrics-tool/tests/context/args/: Makefile
nodes/scikit-metrics-tool/tests/context/args/src/enpkg/: tool.py
nodes/scikit-metrics-tool/tests/context/grpc/: Makefile
nodes/scikit-metrics-tool/tests/context/grpc/src/enpkg/: main.py
nodes/scikit-metrics-tool/tests/context/grpc/src/enpkg/scikit_metrics/: generate_sample_data.py  metric_server.py
nodes/scikit-metrics-tool/tests/data/: bigfile.arrow
nodes/scikit-metrics-tool/tests/integration/: test_scikit_metrics_container.py  test_workflows.py
nodes/scikit-metrics-tool/tests/workflow/compose/: workflow.yml
nodes/scikit-metrics-tool/tests/workflow/cwl/: job.json  tool.cwl
nodes/uncertainty-toolbox-metrics/: Makefile  README.md  spec.json
nodes/uncertainty-toolbox-metrics/tests/: conftest.py  utils.py
nodes/uncertainty-toolbox-metrics/tests/barebone/: test_create_uct_cwl.py  test_create_uct_grpc.py
nodes/uncertainty-toolbox-metrics/tests/context/args/: Dockerfile  Makefile  pyproject.toml
nodes/uncertainty-toolbox-metrics/tests/context/args/src/enpkg/: main.py  tool.py
nodes/uncertainty-toolbox-metrics/tests/context/args/src/enpkg/args_backend/: argexec.py
nodes/uncertainty-toolbox-metrics/tests/data/: config_A.json  config_B.json  labels.arrow  predictions.arrow  standard_deviations.arrow
nodes/uncertainty-toolbox-metrics/tests/integration/: test_uncertainty_toolbox.py
nodes/uncertainty-toolbox-metrics/tests/unit/: generate_test_data.py  test_metrics.py
orchestrator/: .gitignore  README.md
orchestrator/cwl_orch/: Makefile
orchestrator/grpc_orch/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
orchestrator/grpc_orch/src/orchestrator/: main.py
(+31 files in other folders)
