[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enpkg/scikit_metrics"]

[project]
name = "scikit-metrics-tool"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "fsspec>=2025.3.0",
    "grpcio-tools>=1.71.0",
    "numpy",
    "scikit-learn",
    "mki-barebone-io[numpy]"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "python_on_whales",
  "cwltool"
]

[tool.uv.sources]
mki-barebone-io = { path = 'extra/mki-barebone-io' }

[tool.pytest.ini_options]
markers = [
    "unit: run unit tests",
    "integration: run integration tests",
    "grpc: run tests for grpc interface",
    "cwl: run tests for args interface using cwl",
    "barebone: run tests for the barebone only",
    "scikit: run all"
]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"