[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mki_barebone_io"]

[project]
name = "mki-barebone-io"
version = "0.0.1"
dependencies = [
]
requires-python = ">=3.9"
authors = [
  {name = "Maximilian Pintz", email = "maximilian.alexander.pintz@iais.fraunhofer.de"},
  {name = "Daniel Becker", email = "daniel.becker@iais.fraunhofer.de"},
  {name = "Reinhard Budde", email = "reinhard.budde@iais.fraunhofer.de"},
]
description = "Data Loaders for the mki barebone."
readme = "README.md"
license = "LicenseRef-To-Be-Determined"
license-files = ["LICEN[CS]E.*"]
keywords = ["mission ki", "platform", "barebone", "data"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python"
]

[project.optional-dependencies]
arrow = [
  "pyarrow>=19",
  "schema"
]
numpy = [
  "numpy"
]
pandas = [
  "pandas"
]
scikit = [
  "scikit-learn"
]
dev = [
  "pytest",
  "pdoc3"
]