[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enpkg/toolpkg"]

[project]
name = "mocktool"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fsspec>=2025.3.0",
    "grpcio-tools>=1.71.0",
    "mki-barebone-io"
]

[tool.uv.sources]
mki-barebone-io = { path = 'extra/mki-barebone-io' }

[project.optional-dependencies]
dev = [
  "pytest",
  "cwltool"
]

